kubernetes/argocd/kustomize/argocd_ingress_traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: argocd-server-ingress
    app.kubernetes.io/part-of: argocd
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    # Set the host to required value
    - host: argocd.example.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
